# cascade

./: .gitignore  Cargo.toml  README.md
crates/cascade-content-store/: Cargo.toml  README.md
crates/cascade-content-store/src/: cloudflare.rs  file.rs  lib.rs  memory.rs
crates/cascade-core/: Cargo.toml  README.md
crates/cascade-core/src/: error.rs  lib.rs  types.rs
crates/cascade-core/src/application/: flow_definition_service.rs  flow_execution_service.rs  mod.rs  runtime_interface.rs  shared_state_factory.rs
crates/cascade-core/src/domain/: events.rs  flow_definition.rs  flow_instance.rs  mod.rs  repository.rs  shared_state.rs  step.rs
crates/cascade-core/tests/: bdd_tests.rs  integration_tests.rs  order_processing_e2e_test.rs
crates/cascade-dsl/: Cargo.toml  README.md
crates/cascade-dsl/src/: error.rs  lib.rs  parser.rs  types.rs
crates/cascade-dsl/src/flow/: component.rs  condition.rs  mod.rs  step.rs  trigger.rs
crates/cascade-dsl/src/utils/: mod.rs  reference.rs
crates/cascade-dsl/src/validation/: flow_validator.rs  mod.rs  reference.rs  schema.rs
crates/cascade-dsl/tests/: dsl_integration_tests.rs  schema_validation.rs
crates/cascade-edge/: Cargo.toml
crates/cascade-edge/src/: lib.rs  main.rs  test_utils.rs
crates/cascade-edge/src/resilience/: adapters.rs  bulkhead.rs  circuit_breaker.rs  dlq.rs  mocks.rs  mod.rs  throttling.rs
crates/cascade-edge/tests/: bulkhead_test.rs  circuit_breaker_test.rs  throttling_test.rs
crates/cascade-interfaces/: Cargo.toml  README.md
crates/cascade-interfaces/src/: kb.rs  lib.rs
crates/cascade-kb/: Cargo.toml  Dockerfile  README-AURA.md  README-DOCKER.md  README.md  VECTOR_SEARCH.md  cleanup.sh  docker-compose.yml  load_seed_data.sh  make-check.sh  run-aura-tests.sh  run-docker-tests.sh  setup.sh
crates/cascade-kb/src/: lib.rs  main.rs
crates/cascade-kb/src/adapters/: mod.rs  neo4j_store.rs  remote_client.rs
crates/cascade-kb/src/data/: entities.rs  errors.rs  identifiers.rs  mod.rs  trace_context.rs  types.rs
crates/cascade-kb/src/embedding/: mod.rs  neo4j.rs  openai.rs  test_utils.rs
crates/cascade-kb/src/services/: client.rs  messages.rs  mod.rs
crates/cascade-kb/src/storage/: memory.rs  mod.rs  tests.rs
crates/cascade-kb/src/test_utils/: fake_store.rs  fakes.rs  mocks.rs  mod.rs
crates/cascade-kb/src/traits/: dsl_parser.rs  embedding_generator.rs  mod.rs  runtime_api.rs  state_store.rs
crates/cascade-kb/tests/: ecommerse-example.yml  embedding_neo4j_test.rs  integration_tests.rs  mod.rs  multi_tenancy_test.rs  neo4j_connection_test.rs  neo4j_error_handling_test.rs  neo4j_stdlib_components.rs  neo4j_workflow_test.rs  row_to_map_test.rs  test_helpers.rs  test_utils.rs  upsert_graph_data_test.rs  vector_search_test.rs  version_management_test.rs
crates/cascade-kb/tests/e2e/: README.md  full_workflow.rs  mod.rs  neo4j_e2e_debug.rs  neo4j_e2e_test.rs  neo4j_test_report.md
crates/cascade-kb/tests/integration/: app_state_ingestion.rs  (+6 more)
crates/cascade-monitoring/: Cargo.toml  README.md
crates/cascade-monitoring/src/: lib.rs  logging.rs  metrics.rs  telemetry.rs
crates/cascade-monitoring/tests/: monitoring_integration_tests.rs
crates/cascade-server/: Cargo.toml  Cargo.toml.bak  README.md
crates/cascade-server/src/: config.rs  content_store.rs  edge_manager.rs  error.rs  lib.rs  main.rs  server.rs  server_factory.rs  shared_state.rs
crates/cascade-server/tests/: api_tests.rs  content_store_cache_tests.rs  content_store_gc_tests.rs  content_store_resilience_tests.rs  edge_manager_integration_test.rs  edge_runtime_communication_tests.rs  integrated_scenario_tests.rs  performance_tests.rs  redis_pool_tests.rs  resilience_bulkhead_tests.rs  resilience_circuit_breaker_tests.rs  resilience_idempotency_consolidated.rs  resilience_rate_limiter_consolidated.rs  server.rs  server_edge_communication_tests.rs  server_tests.rs  shared_state_resilience_tests.rs  shared_state_tests.rs  test_fixtures.rs
crates/cascade-state-inmemory/: Cargo.toml  README.md
crates/cascade-state-inmemory/src/: examples.rs  lib.rs  repositories.rs  shared_state.rs  tests.rs
crates/cascade-state-postgres/: Cargo.toml  README.md  sqlx-data.json
crates/cascade-state-postgres/migrations/: 20240401000000_initial_schema.sql  20240402000000_additional_indexes.sql
crates/cascade-state-postgres/src/: connection.rs  examples.rs  lib.rs  migrations.rs  prepare.rs  repositories.rs  test_timer.rs  test_utils.rs
crates/cascade-stdlib/: Cargo.toml  README.md
crates/cascade-stdlib/src/: lib.rs
crates/cascade-stdlib/tests/: simple_component_test.rs
crates/cascade-test-utils/: BDD-TESTING.md  Cargo.toml  MIGRATION_GUIDE.md
crates/cascade-test-utils/src/: client.rs  config.rs  error.rs  lib.rs  mod.rs  server.rs  util.rs
tests/: Cargo.toml  MOCK-REDUCTION-GUIDE.md  README.md  TDD.md  TEST-IMPROVEMENT-PLAN.md  TEST_UTILS_GUIDE.md
tests/bdd/: BDD-SETUP-GUIDE.md  Cargo.toml  README.md  SUMMARY.md  compat.rs  lib.rs  lib.rs.bak  main.rs  manual_order_test.rs  minimal_test.rs  run_all_tests.sh
tests/bdd/examples/: basic_order_test.rs  circuit_breaker_test.rs
tests/bdd/features/: circuit_breaker.feature  edge_server_communication.feature  flow_deployment.feature  minimal_test.feature  order_processing.feature  performance.feature  reliability.feature  resilience.feature  security.feature  simple_circuit_breaker.feature  simple_order.feature  standard_order_processing.feature  state_management.feature
tests/bdd/steps/: api_client.rs  circuit_breaker_steps.rs  mod.rs  order_steps.rs  server_steps.rs  world.rs
tests/e2e/: Cargo.toml  http_flow_e2e_test.rs  lib.rs  order_processing_e2e_test.rs
tests/e2e/websocket/: README.md  run_tests.sh
tests/integration/: app_state_ingestion.rs  ingestion_query_flow.rs  kb_integration_test.rs  kb_search_tests.rs  mod.rs
tests/integrations/: Cargo.toml  README.md  core_example.rs  dsl_example.rs  edge_resilience_example.rs  lib.rs  main.rs  monitoring_example.rs  retry_component_test.rs  server_example.rs  state_store_test.rs  timer_service_test.rs
tests/src/: lib.rs
(+60 files in other folders)
