[package]
name = "cascade-monitoring"
version = "0.1.0"
edition = "2021"
description = "Monitoring and observability module for the Cascade platform"
license = "MIT"

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
metrics = "0.21"
once_cell = "1.18"
metrics-exporter-prometheus = { version = "0.12", optional = true }

[dev-dependencies]
mockall = "0.11"
tokio-test = "0.4"

[features]
default = ["prometheus"]
prometheus = ["metrics-exporter-prometheus"]
jaeger = [] 