[package]
name = "cascade-state-inmemory"
version = "0.1.0"
edition = "2021"
description = "In-memory implementation of the state store for Cascade Platform"
license = "MIT"
repository = "https://github.com/maxsvargal/cascade"

[dependencies]
cascade-core = { path = "../cascade-core", version = "0.1.0" }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.35", features = ["full"] }
tracing = "0.1"
uuid = { version = "1.7", features = ["v4", "serde"] }

[dev-dependencies]
tokio-test = "0.4"
tracing-subscriber = { version = "0.3", features = ["env-filter"] } 