[package]
name = "cascade-stdlib"
version = "0.1.0"
edition = "2021"
description = "Provides a standard library of pre-built components for the Cascade Platform."
authors = ["The Cascade Team"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28" } # For I/O and timers
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
reqwest = { version = "0.11", features = ["json"] } #For HTTP Calls
async-trait = "0.1" # needed for trait impl
cascade-core = { path = "../cascade-core" }
# Adding missing dependencies
jsonschema = "0.17" # For schema validation
chrono = { version = "0.4", features = ["serde"] } # For datetime handling
jexl-eval = "0.2.2" # For expression evaluation (using jexl-eval)
jmespath = "0.3.0" # For JMESPath evaluation

# Database dependencies
sqlx = { version = "0.8.4", features = ["runtime-tokio-rustls", "postgres", "json", "chrono", "sqlite"], optional = true }
libsqlite3-sys = { workspace = true }

# Kafka dependencies
rdkafka = { version = "0.34.0-alpha.2", features = ["sasl"], optional = true }

# UUID dependency
uuid = { version = "1.3.3", features = ["v4", "fast-rng"] }

[dev-dependencies]
# Mocking is essential for testing
mockall = "0.12"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
wiremock = "0.5" # For HTTP mocking in tests
futures = "0.3" # For async test utilities
sqlx = { version = "0.8.4", features = ["runtime-tokio-rustls", "postgres", "json", "chrono", "sqlite"] }
tokio = { version = "1.35", features = ["full", "macros", "time", "rt-multi-thread"] }
uuid = { version = "1.7", features = ["v4", "serde"] }
async-trait = "0.1"

[features]
# You can add featurization to components like "database" or "kafka"
database = ["dep:sqlx"]
kafka = ["dep:rdkafka"]
default = []