[package]
name = "cascade-test-utils"
version = "0.1.0"
edition = "2021"
description = "Testing utilities for the Cascade Platform"
license = "Apache-2.0"

[features]
default = ["real_core"] # Enable core support by default
bdd = ["cucumber", "pretty_env_logger"] # BDD testing support
real_core = ["cascade-core"] # Enable real core runtime support
real_edge = ["cascade-edge"] # Enable real edge platform support
real_content_store = ["cascade-content-store"] # Enable real content store support
real_components = ["real_core", "real_edge", "real_content_store"] # Enable all real components

[dependencies]
# Core traits
mockall = "0.11.3"
async-trait = "0.1.68"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11.18", features = ["json"] }
axum = { version = "0.7", features = ["macros"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["trace"] }
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.21"
tracing = "0.1.37"
wiremock = "0.5.19"
uuid = { version = "1.3.3", features = ["v4", "serde"] }
anyhow = "1.0.71"
thiserror = "1.0.40"
chrono = { version = "0.4.26", features = ["serde"] }
rand = "0.8.5"
futures = "0.3.28"
md5 = "0.7.0"

# BDD testing support (optional)
cucumber = { version = "0.21.1", features = ["macros"], optional = true }
pretty_env_logger = { version = "0.5.0", optional = true }

# For fakes/test implementations
parking_lot = "0.12.1"

# Optional real implementation dependencies
cascade-core = { path = "../cascade-core", optional = true }
cascade-edge = { path = "../cascade-edge", optional = true }
cascade-content-store = { path = "../cascade-content-store", optional = true }

[dev-dependencies]
assert_matches = "1.5.0" 