[package]
name = "cascade-bdd-tests"
version = "0.1.0"
edition = "2021"
publish = false
default-run = "unified-bdd-runner"

[dependencies]
cucumber = { workspace = true }
cascade-test-utils = { path = "../../crates/cascade-test-utils" }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
rand = "0.8"
chrono = "0.4"
uuid = { version = "1.3.3", features = ["v4"] }
futures = "0.3.28"
env_logger = { workspace = true }
pretty_env_logger = "0.5.0"
clap = { version = "4.4", features = ["derive"] }

[dev-dependencies]
once_cell = "1.17.1"

# Primary test binary
[[bin]]
name = "unified-bdd-runner"
path = "bin/unified_bdd_runner.rs"

[[test]]
name = "compat"
path = "compat.rs"

[[example]]
name = "basic_order_test"
path = "examples/basic_order_test.rs"

[[example]]
name = "circuit_breaker_test"
path = "examples/circuit_breaker_test.rs"

[[test]]
name = "bdd"
harness = false
path = "main.rs"

[lib]
path = "lib.rs" 