[package]
name = "cascade-e2e-tests"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
cascade-test-utils = { path = "../../crates/cascade-test-utils" }
tokio = { version = "1.28.1", features = ["full"] }
serde_json = "1.0.96"
anyhow = "1.0"
rand = "0.8"

[[test]]
name = "http_flow_e2e"
path = "http_flow_e2e_test.rs"

[[test]]
name = "order_processing_e2e"
path = "order_processing_e2e_test.rs"

[lib]
path = "lib.rs" 